--- a/res/.tmux.conf
+++ b/res/.tmux.conf
@@ -23,7 +23,7 @@ set -g default-terminal 'xterm-256color'
 set -ga terminal-overrides ',xterm-256color:Tc'
 
 # set Zsh as your default Tmux shell
-#set-option -g default-shell /bin/zsh
+set-option -g default-shell /bin/zsh
 
 # increase scroll-back history
 set -g history-limit 10000
