--- a/etc/tmux.conf
+++ b/etc/tmux.conf
@@ -55,7 +55,7 @@ bind -n S-Down  resize-pane -D
 bind -n S-Left  resize-pane -L
 bind -n S-Right resize-pane -R
 
-# Use Ctrl-Shift-arrow keys to swap windowslt-arrow keys without prefix key to switch windows
+# Use Ctrl-Shift-arrow keys to switch windows
 bind -n M-Left  previous-window
 bind -n M-Right next-window
 
